# amplifier-module-tool-task

./: README.md  pyproject.toml  test_task_tool.py
amplifier_mod_tool_task.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amplifier_module_tool_task/: __init__.py
tests/: test_behavioral.py  test_sanitize_agent_name.py  test_validation.py
